--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content= "width=device-width, initial-scale=1.0"> 
   <title>Great Idea - Responsive I</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
@@ -12,5 +13,83 @@
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+<header>
+  <div>
+    <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+  </div>
+  <div class="links">
+    <a href="#services.html">Services</a>
+    <a href="#product">Product</a>
+    <a href="#vision">Vision</a>
+    <a href="#features">Features</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </div> 
+
+</header>
+<div class="top-round">
+    <section class="top">
+      <h1>
+        <a>Innovation</a>
+        <a>On</a>
+        <a>Demand </a>   
+        <a>
+            <button class="button" type="button">Get Started</button>
+        </a>
+      </h1>
+    </section>
+    <section class="round">
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </section>
+  </div>
+
+<div id="container">
+  <section class="middle">
+    <div>
+      <h2>Features</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+    <div>
+      <h2>About</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </section>
+<div class="middle-img">
+  <img  src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+</div>
+  <section class="bottom">
+    <div>
+      <h2>Services</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+    <div>
+      <h2>Product</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+    <div>
+      <h2>Vision</h2>      
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </section>
+  
+  <address>
+    <section id="contact">
+      <h2 class="contact">Contact</h2>
+      <br>
+      <div>
+        <p>123 Way 456 Street<br>
+        Somewhere, USA</p>
+        <br><br>
+        <p>1 (888) 888-8888</p>
+        <br><br>
+        <p>sales@greatidea.io</p>
+      </div>
+    </section>
+  </address>
+  <br><br>
+  <footer>
+     <p>&#169; Great Idea! 2018</p>
+  </footer>
+</div>
 </body>
 </html>
